syntax = "proto3";

import "google/api/annotations.proto";
import "google/api/http.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "user-documents.proto";
import "user-profile.proto";
import "diia-id.proto";
import "profileFeature.proto";
import "token/gender.proto";

package ua.gov.diia.user;
option java_multiple_files = true;
option java_package = "ua.gov.diia.user";

service UserService {
  rpc GetSubscribedSegments(GetSubscribedSegmentsRequest)
      returns (GetSubscribedSegmentsResponse) {}
  rpc GetUserDocuments(ua.gov.diia.user.userdocuments.GetUserDocumentsRequest)
      returns (ua.gov.diia.user.userdocuments.GetUserDocumentsResponse) {}
  rpc HasDocuments(ua.gov.diia.user.userdocuments.HasDocumentsRequest)
      returns (ua.gov.diia.user.userdocuments.HasDocumentsResponse) {}
  rpc GetUserInfoForFilters(GetInfoForFiltersRequest)
      returns (GetInfoForFiltersReply) {}
  rpc GetUserProfileFeatures(
      ua.gov.diia.user.userprofile.GetUserProfileFeaturesRequest)
      returns (ua.gov.diia.user.userprofile.GetUserProfileFeaturesResponse) {}
  rpc GetUserProfiles(ua.gov.diia.user.userprofile.GetUserProfilesRequest)
      returns (ua.gov.diia.user.userprofile.GetUserProfilesResponse) {}
  rpc GetUserDocumentSettings(
      ua.gov.diia.user.userdocuments.GetUserDocumentSettingsReq)
      returns (ua.gov.diia.user.userdocuments.GetUserDocumentSettingsRes) {}
  rpc UpdateDocumentVisibility(
      ua.gov.diia.user.userdocuments.UpdateDocumentVisibilityReq)
      returns (google.protobuf.Empty) {}
  rpc HashFilesToSign(ua.gov.diia.diiaid.HashFilesToSignRequest)
      returns (ua.gov.diia.diiaid.HashFilesToSignResponse) {}
  rpc HashFileToSign(ua.gov.diia.diiaid.HashFileToSignRequest)
      returns (ua.gov.diia.diiaid.HashFileToSignResponse) {}
  rpc ValidateHashSignatures(ua.gov.diia.diiaid.ValidateHashSignaturesRequest)
      returns (ua.gov.diia.diiaid.ValidateHashSignaturesResponse) {}
  rpc ValidateSignedFileHashes(
      ua.gov.diia.diiaid.ValidateSignedFileHashesRequest)
      returns (google.protobuf.Empty) {}
  rpc InitDiiaIdHashesSigning(ua.gov.diia.diiaid.InitDiiaIdHashesSigningRequest)
      returns (google.protobuf.Empty) {}
  rpc HasDiiaIdIdentifierV2(ua.gov.diia.diiaid.HasDiiaIdIdentifierRequest) returns (ua.gov.diia.diiaid.HasDiiaIdIdentifierResponse) {}
}

message GetSubscribedSegmentsRequest { string userIdentifier = 1; }

message GetSubscribedSegmentsResponse { repeated string segments = 1; }

message GetInfoForFiltersRequest { string userIdentifier = 1; }

message GetInfoForFiltersReply {
  enum Gender {
    male = 0;
    female = 1;
  }

  int32 age = 1;
  Gender gender = 2;
  map<string, int32> documents = 3;
  optional string organizationId = 4;
}

